// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading ACT theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="makeStyles-container-1"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="makeStyles-typographyRoot-2 MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="makeStyles-container-3"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="makeStyles-typographyRoot-4 MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`Loading ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    aria-label="Loading..."
    class="makeStyles-container-5"
    data-testid="loading"
  >
    <span
      class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-18lrjg1-MuiCircularProgress-root"
      role="progressbar"
      style="width: 24px; height: 24px;"
      title="Loading..."
    >
      <svg
        class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
          cx="44"
          cy="44"
          fill="none"
          r="19.75"
          stroke-width="4.5"
        />
      </svg>
    </span>
    <span
      class="makeStyles-typographyRoot-6 MuiTypography-root MuiTypography-overline css-b3fch5-MuiTypography-root"
    >
      Loading...
    </span>
  </div>
</div>
`;
